[gd_scene load_steps=2 format=3 uid="uid://dkoobwcotbio2"]

[ext_resource type="Script" uid="uid://snd1ifmb4pyj" path="res://interfaces/navigation_map.gd" id="1_vptr8"]

[node name="NavigationMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vptr8")

[node name="AbstractMap" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[connection signal="resized" from="." to="." method="_on_resized"]
